--- a/html/index.html
+++ b/html/index.html
@@ -1,65 +1,90 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>RR Player Statistics</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.css">
-        <link rel="stylesheet" href="darkly.css">
-        <style>
-            .background {
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                z-index: -1;
-                background-image: url("/background.jpg");
-                filter: blur(8px);
-                -webkit-filter: blur(8px);
-                background-repeat: no-repeat;
-                background-position: center;
-                background-size: cover;
-                opacity: 0.3;
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+  <style>
+    #app {
+        background-image: url("./background_blured.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+  </style>
+</head>
+<body>
+    <div class="background"></div>
+  <div id="app">
+    <v-app>
+      <v-main>
+        <v-container fluid>
+            <v-row>
+                <v-col md="8" offset-md="2" align="center">
+                    <h1 style="font-size: 3.5rem;">Roulette Rivals Player Stats</h1>
+                </v-col>
+            </v-row>
+            <v-row style="margin-top: 150px">
+                <v-spacer></v-spacer>
+                <v-col md="6">
+                    <v-card elevation="12">
+                        <v-card-title>
+                            <v-tabs v-model="tabSelected">
+                                <v-tab>Player Search</v-tab>
+                                <v-tab>Leaderboards</v-tab>
+                                <v-tab>Records</v-tab>
+                                <v-tab>Tournament Statistics</v-tab>
+                            </v-tabs>
+                        </v-card-title>
+                        <v-card-text>
+                            <v-text-field label="Player"></v-text-field><br>
+                            <v-btn
+                            color="primary"
+                            elevation="2"
+                            outlined
+                            >Search</v-btn>
+                        </v-card-text>
+                    </v-card>
+                </v-col>
+                <v-spacer></v-spacer>
+            </v-row>
+            <v-footer absolute padless>
+                <span style="font-style: italic; text-align: center; width: 100%">Made with precision german engineering, calculated hungarian stats & accurate german timings.</span>
+            </v-footer>
+        </v-container>
+      </v-main>
+    </v-app>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+  <script>
+    let vue =new Vue({
+      el: '#app',
+      vuetify: new Vuetify({theme: { dark: true }}),
+      data () {
+          return {
+            players: ["In4Fun", "CurryMaker"],
+            playerNameInput: "",
+            tabSelected: ""
+          }
+      },
+      methods: {
+          customFilter (item, queryText, itemText) {
+            if(queryText == "") {
+                return false;
             }
-        </style>
-    </head>
-    <body>
-        <div class="background"></div>
-        <div class="ui center aligned container">
-            <br>
-            <h1 class="ui header" style="font-weight: bold; font-size: 3.5rem;">Roulette Rivals Player Statistics</h1>
-            <br><br><br><br><br><br>
-            <div class="ui fluid search">
-                <input style="width: 100%" class="prompt" type="text" placeholder="Player" id="playername">
-                <div class="results"></div>
-            </div>
-            <br>
-            <button class="ui inverted primary button" id="search">Search</button>
-            <br><br>
-            <a style="margin: 20px" href="/leaderboards">Leaderboards</a>
-            <a style="margin: 20px" href="/records">Records</a>
-        </div>
-        <div style="bottom: 5px; width: 100%; text-align: center; font-style: italic; position: absolute; color: lightgray; margin-top: 10px;">Made with precision german engineering & calculated hungarian stats.</div>
-
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.js"></script>
-        <script src="/allPlayers.js"></script>
-        <script>
-            $('.ui.search').search({
-                source: players,
-                showNoResults: false,
-                onSelect: function(result, response) {
-                    window.location.href = "/" + result.title;
-                }
-            });
-
-            $('#search').on("click", () => {
-                window.location.href = "/" + $('#playername').val();
-            })
-            $('#playername').on('keyup', (evt) => {
-                if(evt.keyCode === 13) {
-                    window.location.href = "/" + $('#playername').val();
-                }
-            });
-        </script>
-    </body>
+            return itemText.indexOf(queryText) >= 0;
+          }
+      },
+      watch: {
+          tabSelected: (val) => {
+              console.log(val);
+              vue.tabSelected = 0;
+          }
+      }
+    })
+  </script>
+</body>
 </html>
