--- a/html/index.html
+++ b/html/index.html
@@ -34,12 +34,21 @@
                                 <v-tab>Player Search</v-tab>
                                 <v-tab>Leaderboards</v-tab>
                                 <v-tab>Records</v-tab>
-                                <v-tab>Tournament Statistics</v-tab>
+                                <v-menu offset-y>
+                                  <template v-slot:activator="{ on, attrs }">
+                                    <v-tab v-bind="attrs" v-on="on">Tournament Statistics</v-tab>
+                                  </template>
+                                  <v-list>
+                                    <v-list-item href="https://google.com">
+                                      <v-list-item-icon><v-icon>mdi-open-in-new</v-icon></v-list-item-icon>
+                                      <v-list-item-title>RRWC 2021</v-list-item-title>
+                                    </v-list-item>
+                                  </v-list>
+                                </v-menu>
                             </v-tabs>
                         </v-card-title>
                         <v-card-text>
-                            <!-- <v-text-field label="Player"></v-text-field><br> -->
-                            <v-combobox :menu-props="menuProps" v-model="playerNameInput" :items="players" :search-input.sync="playerSearch"></v-combobox>
+                            <v-combobox :menu-props="menuProps" v-model="playerNameInput" :items="players" :search-input.sync="playerSearch" label="Player"></v-combobox>
                             <v-btn
                             color="primary"
                             elevation="2"
@@ -68,7 +77,7 @@
           return {
             players: ["In4Fun", "CurryMaker"],
             playerNameInput: "",
-            tabSelected: "",
+            tabSelected: 0,
             playerSearch: null
           }
       },
@@ -83,7 +92,9 @@
       watch: {
           tabSelected: (val) => {
               console.log(val);
-              vue.tabSelected = 0;
+              vue.$nextTick(() => {
+                vue.tabSelected = 0;
+              })
           }
       },
       computed: {
