--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <style>
     #app {
-        background-image: url("./background_blured.jpg");
+        background-image: url("./background.jpg");
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -39,21 +39,22 @@
                                     <v-tab v-bind="attrs" v-on="on">Tournament Statistics</v-tab>
                                   </template>
                                   <v-list>
-                                    <v-list-item href="https://google.com">
+                                    <v-list-item v-for="comp in competitions" :href="comp.hitmapsStatsURL" target="_blank" :key="comp.tag">
                                       <v-list-item-icon><v-icon>mdi-open-in-new</v-icon></v-list-item-icon>
-                                      <v-list-item-title>RRWC 2021</v-list-item-title>
+                                      <v-list-item-title>{{ comp.tag }}</v-list-item-title>
                                     </v-list-item>
                                   </v-list>
                                 </v-menu>
                             </v-tabs>
                         </v-card-title>
                         <v-card-text>
-                            <v-combobox :menu-props="menuProps" v-model="playerNameInput" :items="players" :search-input.sync="playerSearch" label="Player"></v-combobox>
-                            <v-btn
-                            color="primary"
-                            elevation="2"
-                            outlined
-                            >Search</v-btn>
+                          <v-combobox :menu-props="menuProps" :items="players" :search-input.sync="playerSearch" label="Player" @keyup="search"></v-combobox>
+                          <v-btn
+                          color="primary"
+                          elevation="2"
+                          outlined
+                          @click="searchButton"
+                          >Search</v-btn>
                         </v-card-text>
                     </v-card>
                 </v-col>
@@ -69,29 +70,39 @@
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script>
-    let vue =new Vue({
+    let vue = new Vue({
       el: '#app',
       vuetify: new Vuetify({theme: { dark: true }}),
       data () {
           return {
-            players: ["In4Fun", "CurryMaker"],
-            playerNameInput: "",
+            players: [],
             tabSelected: 0,
-            playerSearch: null
+            playerSearch: null,
+            competitions: []
           }
       },
       methods: {
-          customFilter (item, queryText, itemText) {
-            if(queryText == "") {
-                return false;
+          search: (val) => {
+            if(val.keyCode === 13) {
+                window.location.href = "/" + vue.playerSearch;
             }
-            return itemText.indexOf(queryText) >= 0;
+          },
+          searchButton: () => {
+            window.location.href = "/" + vue.playerSearch;
           }
       },
       watch: {
           tabSelected: (val) => {
-              console.log(val);
+              switch(val) {
+                case 1:
+                  window.location.href = "/leaderboards"
+                  break;
+                case 2:
+                  window.location.href = "/records"
+                  break;
+              }
               vue.$nextTick(() => {
                 vue.tabSelected = 0;
               })
@@ -101,6 +112,11 @@
         menuProps() {
           return !this.playerSearch ? {value: false} : {}
         }
+      },
+      async created() {
+        let frontpageData = await axios.get("/frontpageInfo");
+        this.players = frontpageData.data.players;
+        this.competitions = frontpageData.data.competitions;
       }
     })
   </script>
