Make records great again

--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Roulette Rivals Player Statistics</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
@@ -15,15 +16,16 @@
   </style>
 </head>
 <body>
-    <div class="background"></div>
   <div id="app">
     <v-app>
       <v-main>
         <v-container fluid>
             <v-row>
-                <v-col md="8" offset-md="2" align="center">
+              <v-spacer></v-spacer>
+                <v-col md="8" align="center">
                     <h1 style="font-size: 3.5rem;">Roulette Rivals Player Stats</h1>
                 </v-col>
+                <v-spacer></v-spacer>
             </v-row>
             <v-row style="margin-top: 150px">
                 <v-spacer></v-spacer>
