Remove scroll bar on all pages

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <style>
+    html { overflow-y: auto }
     #app {
         background-image: url("./background.jpg");
         background-repeat: no-repeat;
