--- a/html/records.html
+++ b/html/records.html
@@ -12,6 +12,7 @@
                 color: unset;
                 text-decoration: none;
             }
+            html { overflow-y: auto }
         </style>
     </head>
     <body>
