--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,7 @@
                                     <v-tab v-bind="attrs" v-on="on">Tournament Statistics</v-tab>
                                   </template>
                                   <v-list>
-                                    <v-list-item v-for="comp in competitions" :href="comp.hitmapsStatsURL" target="_blank" :key="comp.tag">
+                                    <v-list-item v-for="comp in competitions" v-if="comp.hitmapsStatsURL !== ''" :href="comp.hitmapsStatsURL" target="_blank" :key="comp.tag">
                                       <v-list-item-icon><v-icon>mdi-open-in-new</v-icon></v-list-item-icon>
                                       <v-list-item-title>{{ comp.tag }}</v-list-item-title>
                                     </v-list-item>
