--- a/html/playerpage.html
+++ b/html/playerpage.html
@@ -49,7 +49,7 @@
                             </v-col>
                             <v-spacer></v-spacer>
                         </v-row>
-                        <v-row>
+                        <v-row class="mb-10">
                             <v-spacer></v-spacer>
                             <v-col md="3">
                                 <v-switch v-model="includeUnofficial" label="Include unofficial competitions"></v-switch>
@@ -113,7 +113,7 @@
                             </v-col>
                             <v-spacer></v-spacer>
                         </v-row>
-                        <v-row>
+                        <v-row class="my-10">
                             <v-spacer></v-spacer>
                             <v-col md="4">
                                 <v-select v-model="mapPicksComps"
@@ -133,6 +133,7 @@
                                     sort-by="picked">
                                 </v-data-table>
                             </v-col>
+                            <v-col md="1"></v-col>
                             <v-col md="4">
                                 <v-select v-model="mapWinratesComps"
                                     label="Competitions"
@@ -146,7 +147,6 @@
                                 <v-data-table
                                     :headers="mapWinratesHeaders"
                                     :items="mapWinrates"
-                                    must-sort="true"
                                     sort-desc="true"
                                     sort-by="wr">
                                 </v-data-table>
